<resources>
    <string name="app_name">Project_Three_Weight_Tracker_Poole</string>
    <string name="app_logo_description">App Logo</string>
    <string name="login_title">Welcome to WeightTracker</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="create_account_button">Create Account</string>
    <string name="Date">Date</string>
    <string name="Weight">Weight</string>
    <string name="Delete">Delete</string>
    <string name="weight_history_title">Weight History</string>
    <string name="add_weight">Add Weight</string>
    <string name="add_weight_title">Add Daily Weight</string>
    <string name="enter_date_hint">Enter Date (MM-DD-YYYY)</string>
    <string name="enter_weight_hint">Enter Weight (lbs)</string>
    <string name="confirm_add">Add</string>
    <string name="go_back">Back</string>
    <string name="sms_title">SMS Notifications</string>
    <string name="sms_explanation">To notify you when you reach your goal weight, we’d like permission to send SMS messages. You can still use the app without this feature.</string>
    <string name="enable_sms">Enable SMS Notifications</string>
    <string name="continue_without_sms">Continue Without SMS</string>
    <string name="delete">Delete</string>
    <string name="weight_display">%1$.1f lbs</string>
    <string name="delete_entry_description">Delete this weight entry</string>
    <string name="save">Save</string>
    <string name="save_entry_description">Save this weight entry</string>
    <string name="edit">Edit</string>
    <string name="edit_entry_description">Edit entry</string>
    <string name="edit_weight_title">Edit Weight Entry</string>
    <string name="save_changes">Save Changes</string>
    <string name="sms_setup">Change SMS settings</string>
    <string name="set_your_goal_weight">Set Your Goal Weight</string>
    <string name="enter_goal_weight_lbs">Enter goal weight (lbs)</string>
    <string name="save_goal_weight">Save Goal Weight</string>
    <string name="set_goal_weight">Set Goal Weight</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
</resources>