<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/goalWeightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_goal_weight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/goalWeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="weight"
        android:hint="@string/enter_goal_weight_lbs"
        android:inputType="numberDecimal"
        style="@style/EditTextStandard"
        app:layout_constraintTop_toBottomOf="@id/goalWeightTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintWidth_max="320dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveGoalWeightButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_goal_weight"
        style="@style/PrimaryButton"
        app:layout_constraintTop_toBottomOf="@id/goalWeightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        style="@style/SecondaryButton"
        app:layout_constraintTop_toBottomOf="@id/saveGoalWeightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
